// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next Auth > getDecryptedKey > DecryptCommand constructor has been called with correct parameters 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "CiphertextBlob": {
          "data": [
            1,
            2,
            3,
            0,
            122,
            75,
            244,
            167,
            211,
            205,
            100,
            38,
            172,
            165,
            110,
            97,
            223,
            251,
            133,
            194,
            196,
            220,
            19,
            115,
            128,
            53,
            194,
            149,
            77,
            176,
            114,
            163,
            39,
            38,
            182,
            33,
            56,
            1,
            5,
            246,
            218,
            230,
            85,
            44,
            72,
            18,
            187,
            133,
            18,
            182,
            224,
            65,
            75,
            119,
            0,
            0,
            0,
            126,
            48,
            124,
            6,
            9,
            42,
            134,
            72,
            134,
            247,
            13,
            1,
            7,
            6,
            160,
            111,
            48,
            109,
            2,
            1,
            0,
            48,
            104,
            6,
            9,
            42,
            134,
            72,
            134,
            247,
            13,
            1,
            7,
            1,
            48,
            30,
            6,
            9,
            96,
            134,
            72,
            1,
            101,
            3,
            4,
            1,
            46,
            48,
            17,
            4,
            13,
            184,
            123,
            248,
            18,
            126,
            203,
            253,
            224,
            223,
            225,
            21,
            90,
            2,
            1,
            16,
            128,
            59,
            227,
            31,
            187,
            79,
            165,
            40,
            228,
            132,
            251,
            50,
            251,
            38,
            241,
            171,
            139,
            2,
            114,
            32,
            112,
            6,
            165,
            225,
            25,
            155,
            217,
            15,
            42,
            134,
            10,
            74,
            204,
            62,
            106,
            253,
            79,
            222,
            229,
            70,
            163,
            114,
            239,
            17,
            44,
            75,
            148,
            234,
            229,
            180,
            230,
            99,
            169,
            29,
            35,
            130,
            220,
            35,
            205,
            140,
            101,
          ],
          "type": "Buffer",
        },
        "KeyId": "testKeyArn",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Mock {},
    },
  ],
}
`;

exports[`Next Auth > getDecryptedKey > DecryptCommand constructor has been called with correct parameters 2`] = `"QVFJREFIcEw5S2ZUeldRbXJLVnVZZC83aGNMRTNCTnpnRFhDbFUyd2NxTW5KclloT0FFRjl0cm1WU3hJRXJ1RkVyYmdRVXQzQUFBQWZqQjhCZ2txaGtpRzl3MEJCd2FnYnpCdEFnRUFNR2dHQ1NxR1NJYjNEUUVIQVRBZUJnbGdoa2dCWlFNRUFTNHdFUVFOdUh2NEVuN0wvZURmNFJWYUFnRVFnRHZqSDd0UHBTamtoUHN5K3lieHE0c0NjaUJ3QnFYaEdadlpEeXFHQ2tyTVBtcjlUOTdsUnFOeTd4RXNTNVRxNWJUbVk2a2RJNExjSTgyTVpRPT0="`;

exports[`Next Auth > getDecryptedKey > KMSClient constructor has been called 1`] = `"QVFJREFIcEw5S2ZUeldRbXJLVnVZZC83aGNMRTNCTnpnRFhDbFUyd2NxTW5KclloT0FFRjl0cm1WU3hJRXJ1RkVyYmdRVXQzQUFBQWZqQjhCZ2txaGtpRzl3MEJCd2FnYnpCdEFnRUFNR2dHQ1NxR1NJYjNEUUVIQVRBZUJnbGdoa2dCWlFNRUFTNHdFUVFOdUh2NEVuN0wvZURmNFJWYUFnRVFnRHZqSDd0UHBTamtoUHN5K3lieHE0c0NjaUJ3QnFYaEdadlpEeXFHQ2tyTVBtcjlUOTdsUnFOeTd4RXNTNVRxNWJUbVk2a2RJNExjSTgyTVpRPT0="`;

exports[`Next Auth > getDecryptedKey > returns decrypted key in base64 format 1`] = `"QVFJREFIcEw5S2ZUeldRbXJLVnVZZC83aGNMRTNCTnpnRFhDbFUyd2NxTW5KclloT0FFRjl0cm1WU3hJRXJ1RkVyYmdRVXQzQUFBQWZqQjhCZ2txaGtpRzl3MEJCd2FnYnpCdEFnRUFNR2dHQ1NxR1NJYjNEUUVIQVRBZUJnbGdoa2dCWlFNRUFTNHdFUVFOdUh2NEVuN0wvZURmNFJWYUFnRVFnRHZqSDd0UHBTamtoUHN5K3lieHE0c0NjaUJ3QnFYaEdadlpEeXFHQ2tyTVBtcjlUOTdsUnFOeTd4RXNTNVRxNWJUbVk2a2RJNExjSTgyTVpRPT0="`;

exports[`Next Auth > getDecryptedKey > returns null if decryption fails 1`] = `null`;

exports[`Next Auth > getDecryptedKey > returns null if no argument is passed 1`] = `null`;

exports[`Next Auth > getDecryptedPassword > return decrypted password as string 1`] = `"decryptedPassword"`;

exports[`Next Auth > getDecryptedPassword > returns null if decrypted key is invalid 1`] = `null`;

exports[`Next Auth > getDecryptedPassword > returns null if email format is invalid 1`] = `null`;

exports[`Next Auth > getDecryptedPassword > sql utility has been called 1`] = `"decryptedPassword"`;

exports[`Next Auth > getPasswordKey > returns null if email format is invalid 1`] = `null`;

exports[`Next Auth > getPasswordKey > returns null if email is empty 1`] = `null`;

exports[`Next Auth > getPasswordKey > returns null if retrieval fails 1`] = `null`;

exports[`Next Auth > getPasswordKey > returns password key as string 1`] = `"passwordKey"`;

exports[`Next Auth > getPasswordKey > sql utility has been called 1`] = `"passwordKey"`;

exports[`Next Auth > getProviderNameConfirmation > returns null if email has an invalid format 1`] = `null`;

exports[`Next Auth > getProviderNameConfirmation > returns null if provider name is empty 1`] = `null`;

exports[`Next Auth > getUserByEmail > returns null if SQL query fails 1`] = `null`;

exports[`Next Auth > getUserByEmail > returns null if email format is invalid 1`] = `null`;

exports[`Next Auth > getUserIntelByUsername > returns null if SQL query fails 1`] = `null`;

exports[`Next Auth > getUserIntelByUsername > returns null if username format is invalid 1`] = `null`;

exports[`Next Auth > isAccountLocked > returns isLocked false if SQL query fails 1`] = `
{
  "isLocked": false,
}
`;

exports[`Next Auth > isAccountLocked > returns isLocked false if email format is invalid 1`] = `
{
  "isLocked": false,
}
`;

exports[`Next Auth > isAccountLocked > returns isLocked true with nextAttempt timestamp 1`] = `
{
  "isLocked": true,
  "nextAttempt": "2024-06-30T12:00:00Z",
}
`;

exports[`Next Auth > isUserSignedInWithProvider > returns false if SQL query fails 1`] = `false`;

exports[`Next Auth > isUserSignedInWithProvider > returns false if email format is invalid 1`] = `false`;

exports[`Next Auth > isUserSignedInWithProvider > returns true if user is signed in with provider 1`] = `true`;

exports[`Next Auth > setFailedAttemptRecord > returns next attempt allowed timestamp 1`] = `"2024-06-30T12:00:00Z"`;

exports[`Next Auth > setFailedAttemptRecord > returns null if SQL query fails 1`] = `null`;

exports[`Next Auth > setFailedAttemptRecord > returns null if email format is invalid 1`] = `null`;

exports[`Next Auth > setNewUser > returns success false if SQL query fails 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if email format is invalid 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if email is empty 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if input data format is invalid 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if name is empty 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if user image URL format is invalid 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if user image URL is empty 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success false if username is empty 1`] = `
{
  "id": "",
  "success": false,
}
`;

exports[`Next Auth > setNewUser > returns success true with new user ID 1`] = `
{
  "id": "1234",
  "success": true,
}
`;

exports[`Next Auth > setUserWithProvider > returns success false if SQL query fails 1`] = `
{
  "success": false,
}
`;

exports[`Next Auth > setUserWithProvider > returns success false if email format is invalid 1`] = `
{
  "success": false,
}
`;

exports[`Next Auth > setUserWithProvider > returns success false if provider ID is empty 1`] = `
{
  "success": false,
}
`;

exports[`Next Auth > setUserWithProvider > returns success false if provider format is invalid 1`] = `
{
  "success": false,
}
`;
